# Daedalus

./: .#ARCHITECTURE.md  ARCHITECTURE.md  CMakeLists.txt  CMakePresets.json  README.md
include/: act.hpp  layer.hpp  mat.hpp  net.hpp  set.hpp
reference/: nn.h
src/: gym.cpp  main.cpp  mat.cpp  net.cpp  test.cpp  train.cpp
